<resources>
    <string name="app_name">Movie App</string>
    <string name="movie_title">Bartkowiak</string>
    <string name="movie_description">After his brother dies in a car crash…</string>
    <string name="movie_language">EN</string>
    <string name="movie_release_date">2021–07–28</string>
    <string name="movie_popularity">8.0</string>
    <string name="movie_vote_average">444</string>
    <string name="language_detail">Language: %s</string>
    <string name="popularity_detail">Popularity: %s</string>
    <string name="vote_average_detail">Votes: %s</string>
    <string name="overview_detail">Overview: %s</string>
    <string name="search">Search movie…</string>
    <string name="bnRate">Submit</string>
    <string name="refresh">Refresh</string>
    <string name="rate_movie">Rate Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>