<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSurfaceDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_poster_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingTop="16dp"
            android:paddingEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/movie_title"
            android:maxLines="2"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textOnPrimaryMediumEmphasis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnFavItem"
            app:layout_constraintTop_toTopOf="@+id/iv_poster_detail" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_description"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            android:paddingEnd="15dp"
            android:textColor="@color/textOnSurfaceHighEmphasis"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster_detail" />

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/movie_language"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textOnSurfaceHighEmphasis"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/movie_release_date"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textOnSurfaceHighEmphasis"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/movie_popularity"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/textOnSurfaceHighEmphasis"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_language" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/movie_vote_average"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/textOnSurfaceHighEmphasis"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_popularity" />

        <TextView
            android:id="@+id/lblRateMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_movie"
            android:paddingTop="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-3dp"
            android:layout_marginRight="-3dp"
            android:rating="0"
            app:mrb_progressTint="@color/onPrimaryActivated"
            android:numStars="10"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblRateMe"
            style="@style/Widget.MaterialRatingBar.RatingBar" />

        <Button
            android:id="@+id/btn_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/bnRate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRatingValue" />

        <TextView
            android:id="@+id/txtRatingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <ImageButton
            android:id="@+id/btnFavItem"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toTopOf="@+id/tv_release_date"
            app:layout_constraintStart_toEndOf="@+id/iv_poster_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>